force-app/main/default/objects/Contact/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Used in New Job Inquiry visual flow</description>
    <formula>IF(  ISBLANK( Account.Name )  ,  Account.FirstName  &amp;&quot; &quot;&amp;   Account.LastName &amp; &quot;, &quot; &amp; Account.BillingStreet   &amp; &quot;, &quot; &amp; Account.BillingCity &amp; &quot;, &quot;&amp;Account.BillingState &amp; &quot;, &quot; &amp; Phone &amp; &quot;, &quot; &amp; MobilePhone,  Account.Name &amp; &apos;-&apos;  &amp; BR() &amp; Account.BillingStreet  &amp; &quot;, &quot; &amp;  Account.BillingCity &amp; &quot;, &quot;&amp;Account.BillingState &amp; &quot;, &quot; &amp; Phone &amp; &quot;, &quot; &amp; MobilePhone )</formula>
    <label>Account Name (formula)</label>
    <type>Text</type>
</CustomField>