force-app/main/default/objects/Contact/fields/AccruedUnApprovedExpenseTotal__c.field-meta.xml
<CustomField>
    <fullName>AccruedUnApprovedExpenseTotal__c</fullName>
    <description>Concur custom field</description>
    <label>Accruing/Unpaid Expense Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>