force-app/main/default/objects/Contact/fields/Adjuster_Type__c.field-meta.xml
<CustomField>
    <fullName>Adjuster_Type__c</fullName>
    <description>dependent field from Contact type - adjuster. Displays types of adjuster.</description>
    <label>Adjuster Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contact_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field adjuster</fullName>
            </value>
            <value>
                <fullName>Inside Adjuster</fullName>
            </value>
            <value>
                <fullName>Independent Adjuster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>