force-app/main/default/objects/Contact/fields/ATI_Resource__c.field-meta.xml
<CustomField>
    <fullName>ATI_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ATI Resource</label>
    <type>Checkbox</type>
</CustomField>