force-app/main/default/objects/Contact/fields/Child_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Child_Reference_ID__c</fullName>
    <externalId>true</externalId>
    <label>Child Reference ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>