force-app/main/default/objects/Contact/fields/Contact_and_Account_Name2__c.field-meta.xml
<CustomField>
    <fullName>Contact_and_Account_Name2__c</fullName>
    <formula>FirstName+&quot; &quot;+LastName+&quot;-&quot;+ Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact and Account Name</label>
    <type>Text</type>
</CustomField>