force-app/main/default/objects/Contact/fields/Contact_Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Job_Status__c</fullName>
    <label>Contact Job Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Evaluating Job</fullName>
            </value>
            <value>
                <fullName>Job In Progress</fullName>
            </value>
            <value>
                <fullName>Job Completed in Last 30 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>