force-app/main/default/objects/Contact/fields/Contact_Ownership_Requester__c.field-meta.xml
<CustomField>
    <fullName>Contact_Ownership_Requester__c</fullName>
    <description>Contact Ownership Requester</description>
    <label>Contact Ownership Requester</label>
    <length>255</length>
    <type>Text</type>
</CustomField>