force-app/main/default/objects/Contact/fields/Contact_Requestor__c.field-meta.xml
<CustomField>
    <fullName>Contact_Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select the ATI employee who made the request to add this contact</description>
    <inlineHelpText>Select the ATI employee who made the request to add this contact</inlineHelpText>
    <label>Contact Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>