force-app/main/default/objects/Contact/fields/Current_Events__c.field-meta.xml
<CustomField>
    <fullName>Current_Events__c</fullName>
    <label>Current Events</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COVID-19</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>