force-app/main/default/objects/Contact/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Catastrophe</fullName>
            </value>
            <value>
                <fullName>Asbestos</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Bio</fullName>
            </value>
            <value>
                <fullName>E.S.</fullName>
            </value>
            <value>
                <fullName>Contents</fullName>
            </value>
            <value>
                <fullName>Microbial</fullName>
            </value>
            <value>
                <fullName>Structure</fullName>
            </value>
            <value>
                <fullName>Biohazard</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Demolition</fullName>
            </value>
            <value>
                <fullName>Emergency Svces</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Technical Svces</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>