force-app/main/default/objects/Contact/fields/FinalExpenseTotal__c.field-meta.xml
<CustomField>
    <fullName>FinalExpenseTotal__c</fullName>
    <description>Concur custom field</description>
    <label>Final/Paid Expense Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>