force-app/main/default/objects/Contact/fields/Google_Drive_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Folder_Name__c</fullName>
    <formula>FirstName + &apos; &apos; +  LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Drive Folder Name</label>
    <type>Text</type>
</CustomField>