force-app/main/default/objects/Contact/fields/Google_Drive_Link__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Link__c</fullName>
    <label>Google Drive Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>