force-app/main/default/objects/Contact/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <formula>Id</formula>
    <label>ID</label>
    <type>Text</type>
</CustomField>