force-app/main/default/objects/Contact/fields/Incurred_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Incurred_Expenses__c</fullName>
    <inlineHelpText>Total Incurred Expenses</inlineHelpText>
    <label>Incurred Expenses</label>
    <summarizedField>Expenses__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Expenses__c.Current_YTD_Expense__c</field>
        <operation>equals</operation>
        <value>true</value>
    </summaryFilterItems>
    <summaryForeignKey>Expenses__c.Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>