force-app/main/default/objects/Contact/fields/Inquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Type__c</fullName>
    <label>Inquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>