force-app/main/default/objects/Contact/fields/IsLiveChat__c.field-meta.xml
<CustomField>
    <fullName>IsLiveChat__c</fullName>
    <label>IsLiveChat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>