force-app/main/default/objects/Contact/fields/Job_Revenue_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Job_Revenue_Last_Year__c</fullName>
    <description>Job revenue related to this contact last year</description>
    <label>Job Revenue Last Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>