force-app/main/default/objects/Contact/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <label>Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open - Not Contacted</fullName>
                <default>true</default>
                <label>Open - Not Contacted</label>
            </value>
            <value>
                <fullName>Working - Contacted</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>Recycled</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>MQL</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
                <isActive>false</isActive>
                <label>Qualified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>