force-app/main/default/objects/Contact/fields/Leave_Us_A_Message__c.field-meta.xml
<CustomField>
    <fullName>Leave_Us_A_Message__c</fullName>
    <label>Leave Us A Message</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>