force-app/main/default/objects/Contact/fields/Lunch_and_Learn_Status__c.field-meta.xml
<CustomField>
    <fullName>Lunch_and_Learn_Status__c</fullName>
    <description>Status used for Lunch and Learn Approval Process</description>
    <label>Lunch and Learn Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unapproved</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>