force-app/main/default/objects/Contact/fields/Lunch_and_Learn_Submitter_Email__c.field-meta.xml
<CustomField>
    <fullName>Lunch_and_Learn_Submitter_Email__c</fullName>
    <description>Email address populated via process builder of the user that is assigned to an activity with the Type of Lunch and Learn used in Lunch and Learn approval process.</description>
    <label>Lunch and Learn Submitter Email</label>
    <type>Email</type>
</CustomField>