force-app/main/default/objects/Contact/fields/Major_Event__c.field-meta.xml
<CustomField>
    <fullName>Major_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Major Event</label>
    <referenceTo>Major_Event__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>