force-app/main/default/objects/Contact/fields/Number_of_Jobs_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Jobs_Last_Year__c</fullName>
    <description>Count of number of jobs created last year related to this contact.  Populated via code.</description>
    <label>Number of Jobs Last Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>