force-app/main/default/objects/Contact/fields/Ownership_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Request_Status__c</fullName>
    <description>Field set by Contact Ownership request approval process</description>
    <label>Ownership Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unapproved</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>