force-app/main/default/objects/Contact/fields/Ownership_Request_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Request_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who submitted the ownership request approval</description>
    <label>Ownership Request Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>