force-app/main/default/objects/Contact/fields/Ownership_Request_Submitter_Email__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Request_Submitter_Email__c</fullName>
    <description>Email address of AE who submitted the Ownership request.  Used in approval/rejection email alerts in the approval process</description>
    <label>Ownership Request Submitter Email</label>
    <type>Email</type>
</CustomField>