force-app/main/default/objects/Contact/fields/Ownership_Requester_ID__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Requester_ID__c</fullName>
    <description>Id of Ownership Requester</description>
    <label>Ownership Requester ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>