force-app/main/default/objects/Contact/fields/Person_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Person_Billing_Street__c</fullName>
    <formula>Account.BillingStreet</formula>
    <label>Person Billing Street</label>
    <type>Text</type>
</CustomField>