force-app/main/default/objects/Contact/fields/printsf__PrintSF_Last_Address_Fail_Error__c.field-meta.xml
<CustomField>
    <fullName>printsf__PrintSF_Last_Address_Fail_Error__c</fullName>
    <description>The USPS address failure error returned via last PrintSF address validation attempt against USPS systems</description>
    <inlineHelpText>The USPS address failure error returned via last PrintSF address validation attempt against USPS systems</inlineHelpText>
    <label>PrintSF Last Address Fail Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>