force-app/main/default/objects/Contact/fields/printsf__PrintSF_Last_Mailer_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>printsf__PrintSF_Last_Mailer_Status_Date__c</fullName>
    <description>Date of the last status update to the most recent Mailer History related to this Contact</description>
    <inlineHelpText>Date of the last status update to the most recent Mailer History related to this Contact</inlineHelpText>
    <label>PrintSF Last Mailer Status Date</label>
    <type>DateTime</type>
</CustomField>