force-app/main/default/objects/Contact/fields/printsf__PrintSF_Last_Move_Forward_Date__c.field-meta.xml
<CustomField>
    <fullName>printsf__PrintSF_Last_Move_Forward_Date__c</fullName>
    <description>The last date a Mailer History related to this Contact had a NCOA Result of Forwarded</description>
    <inlineHelpText>The last date a Mailer History related to this Contact had a NCOA Result of Forwarded</inlineHelpText>
    <label>PrintSF Last Move Forward Date</label>
    <type>DateTime</type>
</CustomField>